# cpp_development_fundamentals

./: .gitignore  README.md
1_white_belt/: CMakeLists.txt
1_white_belt/week_1/1_01/: a_plus_b.cpp
1_white_belt/week_1/1_02/: min_string.cpp
1_white_belt/week_1/1_03/: equation.cpp
1_white_belt/week_1/1_04/: division.cpp
1_white_belt/week_1/1_05/: price.cpp
1_white_belt/week_1/1_06/: even.cpp
1_white_belt/week_1/1_07/: second.cpp
1_white_belt/week_1/1_08/: gcd.cpp
1_white_belt/week_1/1_09/: binary.cpp
1_white_belt/week_2/2_01/: factorial.cpp
1_white_belt/week_2/2_02/: palindrom.cpp
1_white_belt/week_2/2_03/: palindrom_filter.cpp
1_white_belt/week_2/2_04/: maximazer.cpp
1_white_belt/week_2/2_05/: move_strings.cpp
1_white_belt/week_2/2_06/: reverse.cpp
1_white_belt/week_2/2_07/: reverse2.cpp
1_white_belt/week_2/2_08/: temperature.cpp
1_white_belt/week_2/2_09/: queue.cpp
1_white_belt/week_2/2_10/: todolist_month.cpp
1_white_belt/week_2/2_11/: anagrams.cpp
1_white_belt/week_2/2_12/: capitals.cpp
1_white_belt/week_2/2_13/: bus_stations.cpp
1_white_belt/week_2/2_14/: bus_stations2.cpp
1_white_belt/week_2/2_15/: unique_strings.cpp
1_white_belt/week_2/2_16/: values.cpp
1_white_belt/week_2/2_17/: synonyms.cpp
1_white_belt/week_2/2_18/: bus_stations3.cpp
1_white_belt/week_3/3_01/: sorting.cpp
1_white_belt/week_3/3_02/: sorting_without_register.cpp
1_white_belt/week_3/3_03/: sorted_strings.cpp
1_white_belt/week_3/3_04/: first_and_last_names.cpp
1_white_belt/week_3/3_05/: first_and_last_names2.cpp
1_white_belt/week_3/3_06/: reversible_string.cpp
1_white_belt/week_3/3_07/: first_and_last_names3.cpp
1_white_belt/week_3/3_08/: incognizable.cpp
1_white_belt/week_4/4_01/: lecture_title.cpp
1_white_belt/week_4/4_02/: function.cpp
1_white_belt/week_4/4_03/: function_with_mult_and_div.cpp
1_white_belt/week_4/4_04/: work_with_files.cpp
1_white_belt/week_4/4_05/: output_with_precision.cpp
1_white_belt/week_4/4_06/: reading_and_writing_tables.cpp
1_white_belt/week_4/4_07/: students.cpp
1_white_belt/week_4/4_09/: ensure_equal.cpp
1_white_belt/week_4/4_10/: rational_throw.cpp
1_white_belt/week_4/4_11/: calculator.cpp
1_white_belt/week_4/4_12/: time_server.cpp
1_white_belt/week_5/: database.cpp
2_yellow_belt/: CMakeLists.txt
2_yellow_belt/week_1/1_01/: avg_temperature2.cpp
2_yellow_belt/week_1/1_02/: blocks_mass.cpp
2_yellow_belt/week_1/1_03/: regions.cpp
2_yellow_belt/week_1/1_04/: solution.cpp  tracker.cpp  tracker_old.cpp
2_yellow_belt/week_1/1_05/: sqr_all.cpp
2_yellow_belt/week_1/1_06/: element_reference.cpp
2_yellow_belt/week_2/2_02/: test_equation.cpp
2_yellow_belt/week_2/2_03/: test_person.cpp
2_yellow_belt/week_2/2_04/: test_rational.cpp
2_yellow_belt/week_2/2_05/: test_palindrome.cpp
2_yellow_belt/week_2/2_06/: realizations_of_functions.cpp
2_yellow_belt/week_3/3_01/: realizations_of_functions.cpp
2_yellow_belt/week_3/3_02/: phone_number.cpp  rectangle.cpp
2_yellow_belt/week_3/3_03/: bus_manager.cpp  main.cpp  query.cpp  rectangle.cpp  rectangle.h  responses.cpp
2_yellow_belt/week_3/3_04/: 3_04.rar  bus_manager.cpp  bus_manager.h  main.cpp  query.cpp  query.h  responses.cpp  responses.h
2_yellow_belt/week_4/4_01/: part_of_vector.cpp
2_yellow_belt/week_4/4_02/: main.cpp  part_of_set.cpp
2_yellow_belt/week_4/4_03/: split_into_words.cpp
2_yellow_belt/week_4/4_04/: remove_duplicates.cpp
2_yellow_belt/week_4/4_05/: permutations.cpp  remove_duplicates.cpp
2_yellow_belt/week_4/4_06/: demography.cpp  permutations.cpp
2_yellow_belt/week_4/4_07/: merge_sort_2.cpp  merge_sort_3.cpp
2_yellow_belt/week_4/4_08/: 1.cpp  2.cpp  find_nearest.cpp
2_yellow_belt/week_4/4_09/: names_and_sirnames.cpp  second.cpp
2_yellow_belt/week_4/4_10/: prefix_grouping1.cpp  prefix_grouping2.cpp
2_yellow_belt/week_4/4_11/: arithmetic1.cpp  arithmetic2.cpp
2_yellow_belt/week_5/5_01/: inheritance.cpp
2_yellow_belt/week_5/5_02/: sms_and_email.cpp
2_yellow_belt/week_5/5_03/: figures.cpp
2_yellow_belt/week_5/5_04/: refactoring.cpp  refactoring_old.cpp
2_yellow_belt/week_6/: condition_parser.h  database.cpp  date.cpp  date.h  event.cpp  event.h  main.cpp  node.cpp  node.h  token.h  week_6.rar
3_red_belt/: CMakeLists.txt
3_red_belt/week_1/1_00/: max_element.cpp
3_red_belt/week_1/1_01/: macros_log.cpp
3_red_belt/week_1/1_02/: airline_ticket.h  sort_by.cpp
3_red_belt/week_1/1_03/: update_field.cpp
3_red_belt/week_1/1_04/: bad_macros.cpp
3_red_belt/week_1/1_05/: uniq_id.cpp
3_red_belt/week_1/1_06/: table.cpp
3_red_belt/week_1/1_07/: deque.cpp
3_red_belt/week_1/1_08/: paginator.cpp
3_red_belt/week_1/1_09/: student_sorting.cpp
3_red_belt/week_2/2_01/: student.h
3_red_belt/week_2/2_02/: learner.cpp
3_red_belt/week_2/2_03/: express.cpp
3_red_belt/week_2/2_04/: ebook.cpp
3_red_belt/week_2/2_05/: hotels.cpp
3_red_belt/week_3/3_01/: pool.cpp
3_red_belt/week_3/3_02/: swap_sort_copy.cpp
3_red_belt/week_3/3_03/: simple_vector.h
3_red_belt/week_3/3_04/: linked_list.cpp
3_red_belt/week_4/4_01/: sportsmen.cpp
3_red_belt/week_4/4_02/: stack_vector.cpp
3_red_belt/week_4/4_04/: airport_counter.cpp
3_red_belt/week_4/4_05/: text_editor.cpp
3_red_belt/week_4/4_06/: server_stats.cpp  stats.cpp  stats.h
3_red_belt/week_5/5_01/: josephs_permutation.cpp
3_red_belt/week_5/5_02/: ground_heavy_strings.cpp
3_red_belt/week_5/5_03/: simple_vector.h
3_red_belt/week_5/5_04/: split_into_sentences.cpp
3_red_belt/week_5/5_05/: simple_vector_2.h
3_red_belt/week_5/5_06/: merge_sort_3.cpp
3_red_belt/week_5/5_07/: priority_collection_2.cpp
3_red_belt/week_5/5_08/: matrix_sum_1.cpp
3_red_belt/week_5/5_09/: explore_key_words.cpp
3_red_belt/week_5/5_10/: synchronized.cpp
3_red_belt/week_5/5_11/: concurrent_map.cpp
3_red_belt/week_6/6_01/: profile.cpp  search_server.cpp
4_brown_belt/: CMakeLists.txt
4_brown_belt/week_1/1_01/: hash_set.cpp
4_brown_belt/week_1/1_02/: set_iterator_next.cpp
4_brown_belt/week_2/2_03/: ini.cpp  (+2 more)
5_black_belt/: CMakeLists.txt
(+161 files in other folders)
