cmake_minimum_required(VERSION 3.14)
project(white_belt)

set(CMAKE_CXX_STANDARD 14)

##################
##### week 1 #####
##################

add_executable(1_01 week_1/1_01/a_plus_b.cpp)
add_executable(1_02 week_1/1_02/min_string.cpp)
add_executable(1_03 week_1/1_03/equation.cpp)
add_executable(1_04 week_1/1_04/division.cpp)
add_executable(1_05 week_1/1_05/price.cpp)
add_executable(1_06 week_1/1_06/even.cpp)
add_executable(1_07 week_1/1_07/second.cpp)
add_executable(1_08 week_1/1_08/gcd.cpp)
add_executable(1_09 week_1/1_09/binary.cpp)

##################
##### week 2 #####
##################

add_executable(2_01 week_2/2_01/factorial.cpp)
add_executable(2_02 week_2/2_02/palindrom.cpp)
add_executable(2_03 week_2/2_03/palindrom_filter.cpp)
add_executable(2_04 week_2/2_04/maximazer.cpp)
add_executable(2_05 week_2/2_05/move_strings.cpp)
add_executable(2_06 week_2/2_06/reverse.cpp)
add_executable(2_07 week_2/2_07/reverse2.cpp)
add_executable(2_08 week_2/2_08/temperature.cpp)
add_executable(2_09 week_2/2_09/queue.cpp)
add_executable(2_10 week_2/2_10/todolist_month.cpp)
add_executable(2_11 week_2/2_11/anagrams.cpp)
add_executable(2_12 week_2/2_12/capitals.cpp)
add_executable(2_13 week_2/2_13/bus_stations.cpp)
add_executable(2_14 week_2/2_14/bus_stations2.cpp)
add_executable(2_15 week_2/2_15/unique_strings.cpp)
add_executable(2_16 week_2/2_16/values.cpp)
add_executable(2_17 week_2/2_17/synonyms.cpp)
add_executable(2_18 week_2/2_18/bus_stations3.cpp)

##################
##### week 3 #####
##################

add_executable(3_01 week_3/3_01/sorting.cpp)
add_executable(3_02 week_3/3_02/sorting_without_register.cpp)
add_executable(3_03 week_3/3_03/sorted_strings.cpp)
add_executable(3_04 week_3/3_04/first_and_last_names.cpp)
add_executable(3_05 week_3/3_05/first_and_last_names2.cpp)
add_executable(3_06 week_3/3_06/reversible_string.cpp)
add_executable(3_07 week_3/3_07/first_and_last_names3.cpp)
add_executable(3_08 week_3/3_08/incognizable.cpp)

##################
##### week 4 #####
##################

add_executable(4_01 week_4/4_01/lecture_title.cpp)
add_executable(4_02 week_4/4_02/function.cpp)
add_executable(4_03 week_4/4_03/function_with_mult_and_div.cpp)
add_executable(4_04 week_4/4_04/work_with_files.cpp)
add_executable(4_05 week_4/4_05/output_with_precision.cpp)
add_executable(4_06 week_4/4_06/reading_and_writing_tables.cpp)
add_executable(4_07 week_4/4_07/students.cpp)
add_executable(4_08_1 week_4/4_08/1/rational_interface.cpp)
add_executable(4_08_2 week_4/4_08/2/rational_eq_add_sub.cpp)
add_executable(4_08_3 week_4/4_08/3/rational_mult_div.cpp)
add_executable(4_08_4 week_4/4_08/4/rational_io.cpp)
add_executable(4_08_5 week_4/4_08/5/rational_map.cpp)
add_executable(4_09 week_4/4_09/ensure_equal.cpp)
add_executable(4_10 week_4/4_10/rational_throw.cpp)
add_executable(4_11 week_4/4_11/calculator.cpp)
add_executable(4_12 week_4/4_12/time_server.cpp)

##################
##### week 5 #####
##################

add_executable(5_01 week_5/database.cpp)