cmake_minimum_required(VERSION 3.14)
project(4_brown_belt)

set(CMAKE_CXX_STANDARD 14)

##################
##### week 1 #####
##################

add_executable(1_01 week_1/1_01/hash_set.cpp)
add_executable(1_02 week_1/1_02/set_iterator_next.cpp)
add_executable(1_03 week_1/1_03/hash_point.cpp)
add_executable(1_04 week_1/1_04/hash_person.cpp)
add_executable(1_05 week_1/1_05/secondary_index.cpp)


##################
##### week 2 #####
##################

add_executable(2_01 week_2/2_01/xml.cpp week_2/2_01/spendings_xml.cpp)
add_executable(2_02 week_2/2_02/json.cpp week_2/2_02/spendings_json.cpp)
add_executable(2_03 week_2/2_03/ini.cpp week_2/2_03/spendings_ini.cpp)
add_executable(2_04 week_2/2_04/xml.cpp week_2/2_04/json.cpp week_2/2_04/refactoring.cpp)
add_executable(2_05 week_2/2_05/stats_aggregator.cpp week_2/2_05/stats_aggregator_test.cpp)
add_executable(2_06 week_2/2_06/collide.cpp week_2/2_06/geo2d.cpp)
add_executable(2_07 week_2/2_07/comment_server.cpp)


##################
##### week 3 #####
##################

add_executable(3_01 week_3/3_01/print_stats_2.cpp)
add_executable(3_02 week_3/3_02/lazy_value.cpp)
add_executable(3_03 week_3/3_03/synchronized_2.cpp)
add_executable(3_04 week_3/3_04/concurrent_map_2.cpp)
add_executable(3_05 week_3/3_05/polynomial.cpp)
add_executable(3_06 week_3/3_06/object_pool.cpp)
add_executable(3_07 week_3/3_07/zoo.cpp)
add_executable(3_08 week_3/3_08/pipeline.cpp)
add_executable(3_09 week_3/3_09/main1.cpp)
add_executable(3_10 week_3/3_10/main.cpp week_3/3_10/Solution.cpp week_3/3_10/Textures.cpp)
add_executable(3_11 week_3/3_10/Solution.cpp week_3/3_10/main.cpp)


##################
##### week 4 #####
##################

add_executable(4_01 week_4/4_01/unique_ptr.cpp)
add_executable(4_02 week_4/4_02/solution.cpp week_4/4_02/test.cpp)


##################
##### week 5 #####
##################

add_executable(5_01 week_5/5_01/demographic_stats.cpp)
add_executable(5_02 week_5/5_02/fast.cpp)
add_executable(5_03 week_5/5_03/fast.cpp)
add_executable(5_04 week_5/5_04/task_tracker.cpp)
add_executable(5_05 week_5/5_05/hotel_booking.cpp)
add_executable(5_06 week_5/5_06/demographic_tests.cpp)
add_executable(5_07 week_5/5_07/domains.cpp)
add_executable(5_08 week_5/5_08/test_domain.cpp)
add_executable(5_11 week_5/5_11/budget_professional_mobile.cpp)
add_executable(5_12 week_5/5_12/budget_professional_mobile_legacy.cpp)
