cmake_minimum_required(VERSION 3.14)
project(5_black_belt)

set(CMAKE_CXX_STANDARD 14)

##################
##### week 1 #####
##################

add_executable(1_01 week_1/1_01/banned_domains.cpp)


##################
##### week 2 #####
##################

add_executable(2_01 week_2/2_01/json_printer.cpp)
add_executable(2_02 week_2/2_02/save_load.cpp)

