cmake_minimum_required(VERSION 3.14)
project(5_black_belt)

set(CMAKE_CXX_STANDARD 14)

##################
##### week 1 #####
##################

add_executable(1_01 week_1/1_01/banned_domains.cpp)


##################
##### week 2 #####
##################

add_executable(2_01 week_2/2_01/json_printer.cpp)
add_executable(2_02 week_2/2_02/save_load.cpp)


##################
##### week 4 #####
##################

add_executable(4_01 week_4/4_01/optional.cpp)
add_executable(4_02 week_4/4_02/equals_to_one_of.cpp)
add_executable(4_03 week_4/4_03/apply_to_many.cpp)
add_executable(4_04 week_4/4_04/vector.cpp)
